
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int VOID ;
typedef int * PVOID ;


 int * InfpHeap ;
 int InfpHeapRefCount ;

VOID
InfSetHeap(PVOID Heap)
{
  if (((void*)0) == InfpHeap)
    {
      InfpHeap = Heap;
      InfpHeapRefCount = -1;
    }
}
