; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/inflib/extr_infrosgen.c_InfSetHeap.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/inflib/extr_infrosgen.c_InfSetHeap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@InfpHeap = common dso_local global i32* null, align 8
@InfpHeapRefCount = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @InfSetHeap(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %4 = load i32*, i32** @InfpHeap, align 8
  %5 = icmp eq i32* null, %4
  br i1 %5, label %6, label %8

6:                                                ; preds = %1
  %7 = load i32*, i32** %3, align 8
  store i32* %7, i32** @InfpHeap, align 8
  store i32 -1, i32* @InfpHeapRefCount, align 4
  br label %8

8:                                                ; preds = %6, %1
  %9 = load i32, i32* %2, align 4
  ret i32 %9
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
